--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
   -webkit-tap-highlight-color: transparent; }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Calibri";
   font-size: 14px;
   line-height: 1.42857143;
   color: #333; }
@@ -13,22 +13,80 @@ body {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
-  margin-left: auto; }
+  margin-left: auto;
+  color: #666; }
   .container .img-resp {
     display: block;
     max-width: 100%;
     height: auto; }
-  .container .header .box2 {
+  .container .header {
+    text-align: center; }
+    .container .header span {
+      font-size: 2vw; }
+  .container .box2 {
     width: 95%;
     background-color: white;
     padding: 1em;
-    box-shadow: 2px 2px 5px #888888;
+    box-shadow: 2px 2px 5px #D8D8D8;
     margin: 1em 0;
-    text-align: center; }
-    .container .header .box2 p {
+    min-height: 59px; }
+    .container .box2 p {
       margin: 0;
       text-align: left; }
-    .container .header .box2 span {
-      font-size: 2vw; }
+    .container .box2 .error {
+      min-height: 59px; }
+      .container .box2 .error span {
+        float: left;
+        width: 35%;
+        color: red; }
+      .container .box2 .error span.middle {
+        vertical-align: middle;
+        margin: 9px 0;
+        font-size: 30px; }
+      .container .box2 .error p {
+        float: right;
+        width: 65%;
+        font-size: 15px;
+        line-height: 1; }
+      .container .box2 .error p.middle {
+        vertical-align: middle;
+        margin: 15px 0; }
+  .container .right {
+    padding-right: 0 !important; }
+  .container .box-table {
+    padding: 10px; }
+  .container .table {
+    width: 100%;
+    max-width: 100%;
+    border-spacing: 0;
+    border-collapse: collapse; }
+    .container .table td {
+      padding: 10px 0; }
+    .container .table thead {
+      display: table-header-group;
+      vertical-align: middle;
+      border-color: inherit; }
+    .container .table th {
+      vertical-align: bottom;
+      text-align: left; }
+    .container .table tbody tr {
+      border-bottom: solid 1px #F3F1F2; }
+  .container article .box2 {
+    width: 100%;
+    padding: 0; }
+  .container article h2 {
+    background-color: #F3F1F2;
+    padding: 1.2em;
+    font-size: 15px;
+    color: #666; }
+    .container article h2 span {
+      margin: 0;
+      float: right;
+      margin-left: 10px;
+      border-left: solid 1px #DFDFDF;
+      width: 35px;
+      text-align: right; }
+  .container article .grafico {
+    padding: 10px; }
 
 /*# sourceMappingURL=style.css.map */
