--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@ html{
 }
 
 body{
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Calibri";
 	font-size: 14px;
 	line-height: 1.42857143;
 	color: #333;
@@ -16,6 +16,7 @@ body{
 	padding-left: 15px;
 	margin-right: auto;
 	margin-left: auto;
+	color: #666;
 
 	.img-resp{
 		display: block;
@@ -24,22 +25,111 @@ body{
 	}
 
 	.header{
-		.box2{
-			width: 95%;
-			background-color: white;
-			padding: 1em;
-			box-shadow: 2px 2px 5px #888888;
-			margin: 1em 0;
-			text-align: center;
+		text-align: center;
+		span{
+			font-size: 2vw;
+		}
+	}
 
-			p{
-				margin: 0;
-				text-align: left;
-			}
+	.box2{
+		width: 95%;
+		background-color: white;
+		padding: 1em;
+		box-shadow: 2px 2px 5px #D8D8D8;
+		margin: 1em 0;
+		min-height: 59px;
+
+		p{
+			margin: 0;
+			text-align: left;
+		}
+
+		.error{
+			min-height: 59px;
 			span{
-				font-size: 2vw;
-
+				float:left; 
+				width: 35%;
+				color: red;
 			}
+
+			span.middle{
+				vertical-align: middle;
+				margin: 9px 0;
+				font-size: 30px;
+			}
+			p{
+				float:right;  
+				width: 65%; 
+				font-size: 15px; 
+				line-height:1
+			}
+			p.middle{
+				vertical-align: middle;
+				margin: 15px 0;
+			}
+		}
+	}
+
+	.right{
+		padding-right: 0 !important;
+	}
+
+	.box-table{
+		padding: 10px;
+	}
+
+	.table{
+		width: 100%;
+		max-width: 100%;
+		border-spacing: 0;
+		border-collapse: collapse;
+		td{
+			padding: 10px 0;
+		}
+
+		thead{
+			display: table-header-group;
+			vertical-align: middle;
+			border-color: inherit;
+		}
+
+		th{
+			vertical-align: bottom;
+			text-align: left;
+		}
+
+		tbody{
+			tr{
+				border-bottom: solid 1px #F3F1F2;
+			}
+		}
+
+	}
+
+	article{
+		.box2{
+			width: 100%;
+			padding: 0;
+		}
+
+
+
+		h2{
+			background-color: #F3F1F2;
+			padding: 1.2em;
+			font-size:15px;
+			color: #666;
+			span{
+				margin: 0;
+				float: right;
+				margin-left: 10px;
+				border-left: solid 1px #DFDFDF;
+				width: 35px;
+				text-align: right;
+			}
+		}
+		.grafico{
+			padding: 10px;
 		}
 	}
 }
