--- a/css/style.css
+++ b/css/style.css
@@ -56,9 +56,19 @@ body {
       .container .box2 .nav_produtos ul {
         display: inline-flex;
         margin-left: -15px !important; }
+        .container .box2 .nav_produtos ul .active {
+          border-bottom: solid 2px #15AEE0; }
+          .container .box2 .nav_produtos ul .active a {
+            color: #15AEE0; }
         .container .box2 .nav_produtos ul li {
           margin-right: 10px;
-          display: table; }
+          display: table;
+          margin-right: 2em; }
+          .container .box2 .nav_produtos ul li a {
+            text-decoration: none;
+            font-size: 15px;
+            color: #666;
+            font-weight: bold; }
   .container .right {
     padding-right: 0 !important; }
   .container .box-table {
