--- a/sass/style.scss
+++ b/sass/style.scss
@@ -78,9 +78,23 @@ body{
 			ul{
 				display: inline-flex;
 				margin-left: -15px !important;
+
+				.active{
+					border-bottom: solid 2px #15AEE0;
+					a{
+						color: #15AEE0;
+					}
+				}
 				li{
 					margin-right: 10px;
 					display: table;
+					margin-right: 2em;
+					a{
+						text-decoration: none;
+						font-size: 15px;
+						color: #666;
+						font-weight: bold;
+					}
 				}
 			}
 		}
