--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,9 @@ body {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  color: #666; }
+  color: #666;
+  background: none;
+  border: none; }
   .container .img-resp {
     display: block;
     max-width: 100%;
@@ -52,7 +54,8 @@ body {
         vertical-align: middle;
         margin: 15px 0; }
     .container .box2 .nav_produtos {
-      background-color: #F3F1F2; }
+      background-color: #F3F1F2;
+      margin-top: 27px; }
       .container .box2 .nav_produtos ul {
         display: inline-flex;
         margin-left: -15px !important; }
@@ -69,6 +72,9 @@ body {
             font-size: 15px;
             color: #666;
             font-weight: bold; }
+      .container .box2 .nav_produtos button {
+        background: none;
+        border: none; }
   .container .right {
     padding-right: 0 !important; }
   .container .box-table {
